# University-Projects

./: README.md
First-Semester/Arhitectura Sistemelor de Calcul/: examen.asm  problema1.asm  problema10.asm  problema2.asm  problema3.asm  problema4.asm  problema5.asm  problema6.asm  problema7.asm  problema8.asm  problema9.asm
First-Semester/Fundamentele Programarii/Cinema_file/: main.py
First-Semester/Fundamentele Programarii/Cinema_memory/: main.py
First-Semester/Fundamentele Programarii/Examen/: main.py
First-Semester/Fundamentele Programarii/Lab 13/: main.py
First-Semester/Fundamentele Programarii/Lab4-6/: Console.py  Functionalitati.py  Lab4-6intreg.py  Main.py  Teste.py  Validari.py  manage_student.py  start.py
First-Semester/Fundamentele Programarii/Practic/: exportat.txt  main.py
First-Semester/Fundamentele Programarii/Tractoare/: main.py
Second-Semester/Algoritmica Grafurilor/Examen/: CMakeLists.txt  main.cpp
Second-Semester/Programare Orientata pe Obiect/Biblioteca/: CMakeLists.txt  CosCRUDGUI.h  CosReadOnlyGUI.h  GUI.h  GUI_modele.h  Model.h  carte.cpp  carte.h  cos.h  cosul.h  exceptions.h  exportat.html  filtrare.h  fisier.txt  fisiertest.txt  main.cpp  observer.h  raport.h  repository.cpp  repository.h  service.cpp  service.h  sortare.h  teste.cpp  teste.h  undo.h  validator.h  vector_dinamic.h
Second-Semester/Programare Orientata pe Obiect/Examen/: CMakeLists.txt  GUI.h  Model.h  file.txt  main.cpp  masina.h  repository.cpp  repository.h  service.cpp  service.h  test.txt  undo.h
Second-Semester/Programare Orientata pe Obiect/Lab 0/: main.c
Second-Semester/Programare Orientata pe Obiect/Lab 2-4/: CMakeLists.txt  customsort.c  customsort.h  lista.c  lista.h  main.c  oferta.c  oferta.h  service.c  service.h  teste.c  teste.h
Second-Semester/Programare Orientata pe Obiect/Lab 5 Undo/: CMakeLists.txt  MyList.c  MyList.h  buget.c  buget.h  main.c  service.c  service.h
Second-Semester/Programare Orientata pe Obiect/Melodii/: CMakeLists.txt  GUI.h  file.txt  main.cpp  melodie.h  repository.cpp  repository.h  service.h  tabelview.h
Second-Semester/Programare Orientata pe Obiect/Tractoare/: CMakeLists.txt  GUI.h  file.txt  main.cpp  model.h  repository.cpp  repository.h  service.h  tractor.h
Second-Semester/Programare Orientata pe Obiect/lab 9/: CMakeLists.txt  carte.cpp  carte.h  cos.h  ex_testat.html  exceptions.h  fisier.txt  fisiertest.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  teste.cpp  teste.h  undo.h  validator.h  vector_dinamic.h
Second-Semester/Sisteme Dinamice/: Examen.mw  lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab6.mw
Second-Semester/Sisteme de Operare/exam/: a.txt  desc  desc.c  dub2  dub2.c  fifo.c  file.txt  file1.txt  numere  output  output.txt  rwlock  rwlock.c  scr.sh  script1.sh  sub2_16  sub2_16.c
Second-Semester/Sisteme de Operare/test C/: hello-remember  hello-remember.c  matrix-from-binary  matrix-from-binary.c  matrix-from-text  matrix-from-text.c  matrix-to-binary  matrix-to-binary.c
Second-Semester/Sisteme de Operare/test procese/: fisier  pipe1  pipe1.c  pipe2  pipe2.c  prob1  prob1.c  prob2  prob2.c  prob3  prob3.c  problema  problema.c  text
Second-Semester/Sisteme de Operare/test shell/: ex1.sh  ex10.sh  ex11.sh  ex2.sh  ex3.sh  ex4.sh  ex5.sh  ex6.sh  ex7.sh  ex8.sh  ex9.sh  exsite1.sh  exsite2.sh  (+7 more)
Second-Semester/Structuri de Date si Algoritmi/Lab 2 Multime/: App.cpp  CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  TestExtins.cpp  TestScurt.cpp
Second-Semester/Structuri de Date si Algoritmi/Lab 3 Colectie/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
Second-Semester/Structuri de Date si Algoritmi/Lab 4 Dictionar/: App.cpp  CMakeLists.txt  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h  TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h
Third-Semester/Retele de Calculatoare/: labCisco.pkt
(+264 files in other folders)
